--- a/workComer.html
+++ b/workComer.html
@@ -71,7 +71,7 @@
       </div>
     </nav>
 
-    <h4>commercial projects</h4>
+    <h4>Commercial Projects</h4>
 
 
     <div class="cardsContainer">
@@ -200,7 +200,7 @@
         <img src="images/slack.png" alt="Slack logo" class="icon"
       /></a>
       <p class="footer">
-      This project was coded by <a href="https://www.linkedin.com/in/tal-nidam-44946b185/" class="git-link" target="_blank">Tal Nidam</a> </p>
+      This project was coded by<a href="https://www.linkedin.com/in/tal-nidam-44946b185/" class="git-link" target="_blank">Tal Nidam</a></p>
     </footer>
   </body>
 </html>
