--- a/workComer.html
+++ b/workComer.html
@@ -114,7 +114,7 @@
           </button>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Residential Building Tel Aviv</h5>
+          <h5 class="card-title">Karo security and municipal building</h5>
           <p class="card-text">
             Planning proposal for a security and municipal police wing building for the Petah Tikva Municipality, 2500 square meters.
             The selected plot is required to contain, in addition to the new security wing,  the municipality's warehouse buildings, parking for police vehicles, seating areas and a garden with fitness facilities.
