--- a/workResiden.html
+++ b/workResiden.html
@@ -83,6 +83,7 @@
             <button type="button" data-bs-target="#carouselResTelAviv" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselResTelAviv" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselResTelAviv" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselResTelAviv" data-bs-slide-to="4" aria-label="Slide 5"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -97,6 +98,10 @@
             <div class="carousel-item">
               <img src="images/residentialTLV/southfacade.png" class="d-block w-100" alt="...">
             </div>
+            <div class="carousel-item">
+              <img src="images/residentialTLV/1165_DvoraHanevia C.jpg" class="d-block w-100" alt="...">
+            </div>
+            
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselResTelAviv" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -149,6 +154,7 @@
             <div class="carousel-item">
               <img src="images/NetaHouse/07bedroom.jpg" class="d-block w-100" alt="...">
             </div>
+            
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselRedHouse" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
