--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         </div>
       </div>
     </nav>
-    <h2>Hello, I am</h2>
+    <h2></h2>
     <h1>Tal Nidam</h1>
     <h2>Architect & BIM specialist</h2>
     <div class="navigation-links">
-      <a href="contact.html" class="contact-link" title="Contact Tal Nidam">Contact me</a>
-      <a href="about.html" class="about-link" title="About me page">About me</a>
-       <a href="NetivotResearchProject.pdf" class="contact-link" title="Data project Tal Nidam">Data Project</a>
+      <a href="workComer.html" class="contact-link" title="Contact Tal Nidam">Commercial Projects</a>
+      <a href="workResiden.html" class="about-link" title="About me page">Residential Projects</a>
+       <a href="NetivotResearchProject.pdf" class="contact-link" title="Data project Tal Nidam">Data Analysis Project</a>
     </div>
 
    
